manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-blog
  labels:
    app: flaskapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskapi
  template:
    metadata:
      labels:
        app: flaskapi
    spec:
      containers:
        - name: flask-blog-python
          image: registryupmpfg.azurecr.io/flask-blog-python
          #imagePullPolicy: Never
          ports:
            - containerPort: 8080
