manifests/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flaskapi
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: flaskapi
  type: LoadBalancer
