manifests/mysql-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-blog-mysql
  labels:
    app: db
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: flask-blog-mysql
    targetPort: 3306
  selector:
    app: db
  type: ClusterIP
