manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: flaskblogmysql
spec:
    type: LoadBalancer
    ports:
    - port: 3306 
    selector:
        app: flaskblogmysql
